--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://Tetiana4.github.io/goit-react-hw-03-image-finder",
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -11,7 +13,10 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.1.1",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
